[FIX] website_forum: restore broken style
The style of badges was moved to module website_profile in commit
0a8006b2f3c846cac8b09bb99991311353e47477 and thereafter removed from
website_profile in commit 5eeaa384c02b3686bfe7eab45315c219b2591fd5
In this commit, we restore the style in website_forum as it is the only
module in which the badges are used.

--- a/addons/website_forum/static/src/scss/website_forum.scss
+++ b/addons/website_forum/static/src/scss/website_forum.scss
@@ -236,3 +236,14 @@ img.o_forum_avatar_big {
 .website_forum {
     margin-bottom: $spacer;
 }
+
+// Badges
+.badge-gold {
+    color: $gold;
+}
+.badge-silver {
+    color: $silver;
+}
+.badge-bronze {
+    color: $bronze;
+}
